# libs/core/src/domain/game/model-route/model-route.repository.ts
@@ -1,4 +1,5 @@
 import { ModelRouteEntity } from './model-route.entity';
+import { TouristSpot } from './tourist-spot';
 
 export interface ModelRouteRepository {
     /**
@@ -7,4 +8,19 @@ export interface ModelRouteRepository {
      * @returns ModelRouteEntity
      */
     createModelRoute(modelRoute: ModelRouteEntity): Promise<ModelRouteEntity>;
+
+    /**
+     * Create tourist spot
+     * @param touristSpot
+     * @param modelRouteId
+     * @returns TouristSpot
+     */
+    createTouristSpot(touristSpot: TouristSpot, modelRouteId: string): Promise<TouristSpot>;
+
+    /**
+     * Get model route by model route id
+     * @param modelRouteId
+     * @returns ModelRouteEntity
+     */
+    getModelRouteByModelRouteId(modelRouteId: string): Promise<ModelRouteEntity>;
 }
